<resources>
    <string name="app_name">"Looks Like Blank"</string>
    <string name="edit_message">Enter a Message</string>
    <string name="button_send">Send</string>
    <string name="Touch_Me">Touch Me If You Dare</string>
    <string name="You_Died">You Died</string>
    <string name="Guess_this">What do you see?</string>
    <string name="AnswerPic1">A Human!</string>
    <string name="Answer">Check out what it is!</string>
    <string name="Next">Next!</string>
    <string name="Previous">Previous!</string>
    <string name="Your_Answer">You Answered:</string>
    <string name="Actual_Answer">What We See:</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
