...
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.pavilion.lookslikeblank.MainActivity">


    <EditText
        android:id="@+id/editText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="181dp"
        android:ems="10"
        android:hint="@string/edit_message"
...
